--- a/sourceviewcore/build.gradle
+++ b/sourceviewcore/build.gradle
@@ -33,9 +33,13 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 }
+
+ext {
+    PUBLISH_ARTIFACT_ID = "sourceviewcore"
+}
+apply from: '../maven_push.gradle'
