--- a/sourceviewcore/build.gradle
+++ b/sourceviewcore/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.1.0"
+        versionCode 1
+        versionName "0.1.0"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -37,5 +37,6 @@ dependencies {
 
 ext {
     PUBLISH_ARTIFACT_ID = "sourceviewcore"
+    PUBLISH_VERSION = '0.1.0'
 }
 apply from: '../maven_push.gradle'
