--- a/sourceviewer/build.gradle
+++ b/sourceviewer/build.gradle
@@ -38,10 +38,16 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-    api project(":sourceviewcore")
+    implementation 'com.github.fhbianling:sourceviewcore:0.1.0'
 }
+
+ext {
+    PUBLISH_ARTIFACT_ID = "sourceviewer"
+    PUBLISH_VERSION = '0.1.0'
+}
+apply from: '../maven_push.gradle'
