--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,14 @@
 buildscript {
     ext.kotlin_version = "1.4.32"
     repositories {
-        maven {
-            url uri('repo')
-        }
+        mavenCentral()
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.github.fhbianling:SourceCodePlugin:1.0.0"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.github.fhbianling:SourceCodePlugin:0.1.2"
     }
 }
 
