--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+    apply from: "config.gradle"
+    ext.kotlin_version = "1.5.0"
+    ext.gradle_version = "4.2.0"
+    ext.isDev = true
     repositories {
+        if (isDev) {
+            maven {
+                url uri("./repo")
+            }
+        }
         mavenCentral()
         google()
-        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.github.fhbianling:SourceCodePlugin:0.1.2"
+        classpath "com.github.fhbianling:source-plugin:${versionConfig.plugin}"
     }
 }
 
@@ -17,7 +25,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()
     }
 }
 
