--- a/source-core/src/main/AndroidManifest.xml
+++ b/source-core/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bian.source.core">
 
+    <application>
+        <activity android:name=".view.DirSourceActivity" />
+        <activity android:name=".view.FileSourceActivity" />
+    </application>
 </manifest>
