--- a/config.gradle
+++ b/config.gradle
@@ -3,10 +3,15 @@ ext {
             group: 'com.github.fhbianling'
     ]
     versionConfig = [
-            plugin    : "0.0.1",
-            annotation: "0.0.1"
+            plugin: "0.0.1",
+            core  : "0.0.1"
+    ]
+    publishVersionConfig = [
+            plugin: "0.0.2",
+            core  : "0.0.2"
     ]
     artifactConfig = [
-            plugin: "source-plugin"
+            plugin: "source-plugin",
+            core  : "source-core"
     ]
 }
