--- a/example_android_lib/build.gradle
+++ b/example_android_lib/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'com.bian.source.plugin'
 }
 
 android {
@@ -30,6 +31,9 @@ android {
         jvmTarget = '1.8'
     }
 }
+sourceView {
+    dir "src"
+}
 
 dependencies {
 
@@ -40,4 +44,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation project(":source-core")
 }
