--- a/source-core/build.gradle
+++ b/source-core/build.gradle
@@ -32,3 +32,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.google.code.gson:gson:2.8.6'
 }
+
+rootProject.ext.publishConfig = [
+        groupId   : baseConfig.group,
+        version   : publishVersionConfig.core,
+        artifactId: artifactConfig.core
+]
+
+apply from: "../publish_android.gradle"
+
+task publishRepo(group: "local")
+publish.dependsOn(assemble)
+publishRepo.dependsOn(publish)
