--- a/example_android_lib/src/main/AndroidManifest.xml
+++ b/example_android_lib/src/main/AndroidManifest.xml
@@ -2,4 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bian.example_android_lib">
 
+    <application>
+        <activity android:name=".TestActivity" />
+    </application>
 </manifest>
